setup Bootstrap; added content

--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Nathan Greenberg</title>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" type="text/css"
+	  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet"
+	  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+    <link rel="stylesheet"
+	  href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
+    <link rel="stylesheet" href="styles.css">
+  </head>
+
+  <body>
+    <h1>Nathan Greenberg</h1>
+
+    <div class="container">
+      <div class="row">
+	<div class="col-md-4">
+	  <div class="demo-content bg-2">
+	    <h1>Loading</h1>
+	    <i class="fa fa-circle-o-notch fa-spin"></i>
+	  </div>
+	</div>
+	<div class="col-md-4">
+	  <div class="demo-content bg-1">
+	    <h1>Loading</h1>
+	    <i class="fa fa-circle-o-notch fa-spin"></i>
+	  </div>
+	</div>
+	<div class="col-md-4">
+	  <div class="demo-content bg-3">
+	    <h1>Loading</h1>
+	    <i class="fa fa-circle-o-notch fa-spin"></i>
+	  </div>
+	</div>
+      </div>
+    </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  </body>
+</html>
