--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css"
-	  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet"
-	  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+	    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
     <link rel="stylesheet"
-	  href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	    href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="styles.css">
   </head>
@@ -23,20 +23,28 @@
       <div class="row">
 	<div class="col-md-4">
 	  <div class="demo-content bg-2">
-	    <h1>Loading</h1>
+	    <h1>Loading...</h1>
 	    <i class="fa fa-circle-o-notch fa-spin"></i>
 	  </div>
 	</div>
 	<div class="col-md-4">
 	  <div class="demo-content bg-1">
-	    <h1>Loading</h1>
+	    <h1>Loading...</h1>
 	    <i class="fa fa-circle-o-notch fa-spin"></i>
 	  </div>
 	</div>
 	<div class="col-md-4">
 	  <div class="demo-content bg-3">
-	    <h1>Loading</h1>
+	    <h1>Loading...</h1>
 	    <i class="fa fa-circle-o-notch fa-spin"></i>
+	  </div>
+	</div>
+      </div>
+
+      <div class="row">
+	<div class="col-md-12">
+	  <div class="banner">
+	    <p>Everything happens for a reason</p>
 	  </div>
 	</div>
       </div>
