made more reactive

--- a/index.html
+++ b/index.html
@@ -21,28 +21,26 @@
 
     <div class="container">
       <div class="row">
-	<div class="col-md-4">
+	<div class="col-md-4 col-md-offset-0 col-sm-8 col-sm-offset-2 col-xs-12 col-xs-offset-0">
 	  <div class="demo-content bg-2">
 	    <h1>Ambrosia</h1>
 	    <p>Lorem ipsum dolor sit amet, in quem dicunt mel. Vel nonumy scaevola cu. Vix autem fugit iusto id, eu sed deseruisse philosophia. Nostro regione periculis te est, id quo liber intellegat. Persius temporibus id mea. Vocibus commune recteque cum id, no iudico essent vituperatoribus sed.</p>
 	  </div>
 	</div>
-	<div class="col-md-4">
+	<div class="col-md-4 col-md-offset-0 col-sm-8 col-sm-offset-2 col-xs-12 col-xs-offset-0">
 	  <div class="demo-content bg-1">
 	    <h1>Defenestration</h1>
 	    <p>Ludus eruditi vim et, vel solum dolorum eu, in cum mazim accumsan. Ad vis audiam recusabo forensibus, hinc laudem ad mei, qui atqui summo pericula an. Vim eu agam commodo referrentur. Eius quodsi no ius, alienum argumentum eos eu.<p>
 	  </div>
 	</div>
-	<div class="col-md-4">
+	<div class="col-md-4 col-md-offset-0 col-sm-8 col-sm-offset-2 col-xs-12 col-xs-offset-0">
 	  <div class="demo-content bg-3">
 	    <h1>Lifestyle</h1>
 	    <p>Senserit adolescens ea ius, eam ea melius numquam habemus. Usu ponderum reprimique id. Qui no epicuri salutatus, altera legendos conceptam an mea. Stet scaevola an vix. Quem primis impedit per ut, case oportere corrumpit cum ad, errem veniam pri ad. Te blandit iudicabit quo, phaedrum reprehendunt est in.<p>
 	  </div>
 	</div>
-      </div>
 
-      <div class="row">
-	<div class="col-md-12">
+	<div class="col-md-12 col-md-offset-0 col-sm-8 col-sm-offset-2 col-xs-12 col-xs-offset-0">
 	  <div class="banner">
 	    <p>Everything happens for a reason</p>
 	  </div>
