--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Nathan Greenberg</title>
+    <title>Citadel</title>
 
     <link rel="stylesheet" type="text/css"
 	    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <h1>Strafing Perfection</h1>
+    <h1>Citadel</h1>
 
     <div class="container">
       <div class="row">
