--- a/signin.html
+++ b/signin.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Sign In</title>
+    <title>Citadel - Sign In</title>
 
     <link rel="stylesheet" type="text/css"
 	    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
